--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
   <meta charset="UTF-8">
   <title>Min GitHub-sida</title>
 </head>
+
 <body>
   <h1>Min första sida med Git och GitHub</h1>
   <p>Publicerad från min egen server.</p>
+  <br>
+  <p>Den här sidan uppdaterades med git pull.</p>
 </body>
+
 </html>
